[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/Place_Down_Buttons.gd" type="Script" id=1]

[node name="Place_Down_Buttons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -407.0
margin_bottom = -185.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaceDown" type="Button" parent="."]
margin_left = 8.87564
margin_top = 8.23242
margin_right = 84.8756
margin_bottom = 28.2324

[node name="Label" type="Label" parent="PlaceDown"]
margin_top = 3.0
margin_right = 74.0
margin_bottom = 17.0
text = "Place Down"

[node name="Objects" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Object1" type="Button" parent="Objects"]
margin_left = 8.87564
margin_top = 39.3803
margin_right = 84.8756
margin_bottom = 59.3803

[node name="Label" type="Label" parent="Objects/Object1"]
margin_left = 13.2142
margin_top = 3.0
margin_right = 87.2142
margin_bottom = 17.0
text = "Object1"

[node name="Object2" type="Button" parent="Objects"]
margin_left = 8.87564
margin_top = 69.5842
margin_right = 84.8756
margin_bottom = 89.5842
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Objects/Object2"]
margin_left = 10.3826
margin_top = 3.0
margin_right = 84.3826
margin_bottom = 17.0
text = "Object 2"

[connection signal="pressed" from="PlaceDown" to="." method="_on_PlaceDown_pressed"]
[connection signal="pressed" from="Objects/Object1" to="." method="_on_Object1_pressed"]
[connection signal="pressed" from="Objects/Object2" to="." method="_on_Object2_pressed"]
